Full aside fixings

--- a/package/index.html
+++ b/package/index.html
@@ -50,6 +50,152 @@
             </nav>
         </footer>
         <article id="main">
+            <p>
+                    <button class="anchor">Anchor</button>
+                    <button class="anchor accept">Accept</button>
+                    <button class="anchor cancel">Cancel</button>
+                </p>
+
+                <p>
+                    <button class="smallest">Smallest</button>
+                    <button class="small">Small</button>
+                    <button >Normal</button>
+                    <button class="big">Big</button>
+                    <button class="biggest">Biggest</button>
+                </p>
+
+                <p>
+                    <button class="smallest"><span class="icon spin1 animated"></span><span>Hola</span></button>
+
+                    <button class="small"><span class="icon spin2 animated"></span><span>Hola</span></button>
+
+                    <button class=""><span class="icon spin3 animated"></span><span>Hola</span></button>
+
+                    <button class="big"><span class="icon spin4 animated"></span><span>Hola</span></button>
+
+                    <button class="biggest"><span class="icon spin5 animated"></span><span>Hola</span></button>
+                </p>
+
+                <p>
+                    <button class="smallest icon ok">Hola</button>
+
+                    <button class="small icon ok">Hola</button>
+
+                    <button class="icon ok">Hola</button>
+
+                    <button class="big icon ok">Hola</button>
+
+                    <button class="biggest icon ok">Hola</button>
+                </p>
+
+                <p>
+                    <button class="smallest icon ok"></button>
+
+                    <button class="small icon ok"></button>
+
+                    <button class="icon ok"></button>
+
+                    <button class="big icon ok"></button>
+
+                    <button class="biggest icon ok"></button>
+                </p>
+
+                <p>
+                    <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                </p>
+
+                <p>
+                    <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+                </p>
+                <p>
+                    <button class="anchor">Anchor</button>
+                    <button class="anchor accept">Accept</button>
+                    <button class="anchor cancel">Cancel</button>
+                </p>
+
+                <p>
+                    <button class="smallest">Smallest</button>
+                    <button class="small">Small</button>
+                    <button >Normal</button>
+                    <button class="big">Big</button>
+                    <button class="biggest">Biggest</button>
+                </p>
+
+                <p>
+                    <button class="smallest"><span class="icon spin1 animated"></span><span>Hola</span></button>
+
+                    <button class="small"><span class="icon spin2 animated"></span><span>Hola</span></button>
+
+                    <button class=""><span class="icon spin3 animated"></span><span>Hola</span></button>
+
+                    <button class="big"><span class="icon spin4 animated"></span><span>Hola</span></button>
+
+                    <button class="biggest"><span class="icon spin5 animated"></span><span>Hola</span></button>
+                </p>
+
+                <p>
+                    <button class="smallest icon ok">Hola</button>
+
+                    <button class="small icon ok">Hola</button>
+
+                    <button class="icon ok">Hola</button>
+
+                    <button class="big icon ok">Hola</button>
+
+                    <button class="biggest icon ok">Hola</button>
+                </p>
+
+                <p>
+                    <button class="smallest icon ok"></button>
+
+                    <button class="small icon ok"></button>
+
+                    <button class="icon ok"></button>
+
+                    <button class="big icon ok"></button>
+
+                    <button class="biggest icon ok"></button>
+                </p>
+
+                <p>
+                    <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+
+                    <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                </p>
+
+                <p>
+                    <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+
+                    <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
+                </p>
             <button class="anchor" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
