Improved pull and refresh

--- a/package/index.html
+++ b/package/index.html
@@ -43,12 +43,12 @@
                 <span>Elem3</span>
             </nav>
         </header>
-        <!-- <footer>
+        <footer>
             <nav>
                 <div><button class="icon ok" id="show_success2">Success<span class="counter">5</span></button></div>
                 <div><button id="show_progress2">Progress<span class="counter">84</span></button></div>
             </nav>
-        </footer> -->
+        </footer>
         <article id="main">
             <p>
                     <button class="anchor">Anchor</button>
