Many fixings for firefox

--- a/package/index.html
+++ b/package/index.html
@@ -34,7 +34,7 @@
                 <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
             </nav>
             <nav class="right">
-                <button  data-visible="buttons" class="button" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                <button  class="button" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
             </nav>
             <h1>TaKo!!</h1>
             <nav>
