--- a/package/index.html
+++ b/package/index.html
@@ -38,9 +38,9 @@
             </nav>
             <h1>TaKo!!</h1>
             <nav>
-                <span class="current icon ok">Elem1</span>
-                <span>Elem2</span>
-                <span>Elem3</span>
+                <button data-article="forms" class="icon check">Forms</button>
+                <button data-article="buttons" class="icon tasks">Buttons</button>
+                <button data-article="lists" class="icon list">Lists</button>
             </nav>
         </header>
         <footer>
