Improved aside lists

--- a/package/index.html
+++ b/package/index.html
@@ -20,11 +20,11 @@
     <aside class="full">
     <!-- <aside> -->
         <ul>
-            <li data-article="forms">Forms <span class="counter">125</span></li>
-            <li data-article="lists">Lists</li>
-            <li data-article="buttons">Buttons</li>
-            <li data-article="layouts">Layouts</li>
-            <li data-article="notifications">Notifications</li>
+            <li class="icon box" data-article="forms">Forms <span class="counter">125</span></li>
+            <li class="icon box" data-article="lists">Lists</li>
+            <li data-article="buttons"><img class="small" src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Buttons</span></li>
+            <li data-article="layouts"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Layouts</span></li>
+            <li data-article="notifications"><img class="big" src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Notifications</span></li>
         </ul>
     </aside>
 
