--- a/package/index.html
+++ b/package/index.html
@@ -378,7 +378,7 @@
                 </div>
             </div>
         </article>
-        <article id="notifications" class="indented">
+        <article id="notifications" class="indented active">
             <div>
                 <button class="anchor accept" id="show_success">Success</button>
                 <button class="anchor cancel" id="show_error">Error</button>
@@ -437,7 +437,7 @@
             })
         });
         $("#show_loading").bind("tap", function(){
-            Tako.Notification.loading("Loading Data", 5, function(){console.log("LOADING CB");})
+            Tako.Notification.loading("Loading Data", null, function(){console.log("LOADING CB");})
         });
         $("#show_progress").bind("tap", function(){
             var progress = Tako.Notification.progress("box animated", "Downloading", "Please wait until your download is completed");
