--- a/package/index.html
+++ b/package/index.html
@@ -51,9 +51,9 @@
         </footer>
         <article id="main">
             <p>
-                    <button class="anchor">Anchor</button>
-                    <button class="anchor accept">Accept</button>
-                    <button class="anchor cancel">Cancel</button>
+                    <button class="wide">Wide</button>
+                    <button class="wide accept">Accept</button>
+                    <button class="wide cancel">Cancel</button>
                 </p>
 
                 <p>
@@ -124,9 +124,9 @@
                     <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
                 </p>
                 <p>
-                    <button class="anchor">Anchor</button>
-                    <button class="anchor accept">Accept</button>
-                    <button class="anchor cancel">Cancel</button>
+                    <button class="wide">Wide</button>
+                    <button class="wide accept">Accept</button>
+                    <button class="wide cancel">Cancel</button>
                 </p>
 
                 <p>
@@ -196,14 +196,14 @@
 
                     <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
                 </p>
-            <button class="anchor" data-article="notifications">Action</button>
+            <button class="wide" data-article="notifications">Action</button>
         </article>
         <article id="buttons" class="indented">
             <div>
                 <p>
-                    <button class="anchor">Anchor</button>
-                    <button class="anchor accept">Accept</button>
-                    <button class="anchor cancel">Cancel</button>
+                    <button class="wide">Wide</button>
+                    <button class="wide accept">Accept</button>
+                    <button class="wide cancel">Cancel</button>
                 </p>
 
                 <p>
@@ -380,11 +380,11 @@
         </article>
         <article id="notifications" class="indented active">
             <div>
-                <button class="anchor accept" id="show_success">Success</button>
-                <button class="anchor cancel" id="show_error">Error</button>
-                <button class="anchor" id="show_confirm">Confirm</button>
-                <button class="anchor grey" id="show_loading">Loading</button>
-                <button class="anchor" id="show_progress">Progress</button>
+                <button class="wide accept" id="show_success">Success</button>
+                <button class="wide cancel" id="show_error">Error</button>
+                <button class="wide" id="show_confirm">Confirm</button>
+                <button class="wide grey" id="show_loading">Loading</button>
+                <button class="wide" id="show_progress">Progress</button>
             </div>
         </article>
     </section>
