Fixing on fieldset

--- a/package/index.html
+++ b/package/index.html
@@ -378,7 +378,7 @@
                 </div>
             </div>
         </article>
-        <article id="notifications" class="indented active">
+        <article id="notifications" class="indented">
             <div>
                 <button class="wide accept" id="show_success">Success</button>
                 <button class="wide cancel" id="show_error">Error</button>
