--- a/package/index.html
+++ b/package/index.html
@@ -18,10 +18,10 @@
 
 <body>
     <aside class="full">
-        <header>
-            <h1>Hola</h1>
-        </header>
     <!-- <aside> -->
+        <header>
+            <h1>Tako trial</h1>
+        </header>
         <ul>
             <li class="icon box" data-article="forms">Forms <span class="counter">125</span></li>
             <li class="icon box" data-article="lists">Lists</li>
@@ -53,158 +53,7 @@
             </nav>
         </footer>
         <article id="main">
-            <p>
-                    <button class="wide">Wide</button>
-                    <button class="wide accept">Accept</button>
-                    <button class="wide cancel">Cancel</button>
-                </p>
-
-                <p>
-                    <a class="button smallest">Smallest</a>
-                    <a class="button small">Small</a>
-                    <a class="button">Normal</a>
-                    <a class="button big">Big</a>
-                    <a class="button biggest">Biggest</a>
-                </p>
-                <button class="smallest">Smallest</button>
-                    <button class="small">Small</button>
-                    <button >Normal</button>
-                    <button class="big">Big</button>
-                    <button class="biggest">Biggest</button>
-
-                <p>
-                    <button class="smallest"><span class="icon spin1 animated"></span><span>Hola</span></button>
-
-                    <button class="small"><span class="icon spin2 animated"></span><span>Hola</span></button>
-
-                    <button class=""><span class="icon spin3 animated"></span><span>Hola</span></button>
-
-                    <button class="big"><span class="icon spin4 animated"></span><span>Hola</span></button>
-
-                    <button class="biggest"><span class="icon spin5 animated"></span><span>Hola</span></button>
-                </p>
-
-                <p>
-                    <button class="smallest icon ok">Hola</button>
-
-                    <button class="small icon ok">Hola</button>
-
-                    <button class="icon ok">Hola</button>
-
-                    <button class="big icon ok">Hola</button>
-
-                    <button class="biggest icon ok">Hola</button>
-                </p>
-
-                <p>
-                    <button class="smallest icon ok"></button>
-
-                    <button class="small icon ok"></button>
-
-                    <button class="icon ok"></button>
-
-                    <button class="big icon ok"></button>
-
-                    <button class="biggest icon ok"></button>
-                </p>
-
-                <p>
-                    <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-
-                    <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-
-                    <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-
-                    <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-
-                    <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-                </p>
-
-                <p>
-                    <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
-
-                    <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
-
-                    <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
-
-                    <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
-
-                    <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
-                </p>
-                <p>
-                    <button class="wide">Wide</button>
-                    <button class="wide accept">Accept</button>
-                    <button class="wide cancel">Cancel</button>
-                </p>
-
-                <p>
-                    <button class="smallest">Smallest</button>
-                    <button class="small">Small</button>
-                    <button >Normal</button>
-                    <button class="big">Big</button>
-                    <button class="biggest">Biggest</button>
-                </p>
-
-                <p>
-                    <button class="smallest"><span class="icon spin1 animated"></span><span>Hola</span></button>
-
-                    <button class="small"><span class="icon spin2 animated"></span><span>Hola</span></button>
-
-                    <button class=""><span class="icon spin3 animated"></span><span>Hola</span></button>
-
-                    <button class="big"><span class="icon spin4 animated"></span><span>Hola</span></button>
-
-                    <button class="biggest"><span class="icon spin5 animated"></span><span>Hola</span></button>
-                </p>
-
-                <p>
-                    <button class="smallest icon ok">Hola</button>
-
-                    <button class="small icon ok">Hola</button>
-
-                    <button class="icon ok">Hola</button>
-
-                    <button class="big icon ok">Hola</button>
-
-                    <button class="biggest icon ok">Hola</button>
-                </p>
-
-                <p>
-                    <button class="smallest icon ok"></button>
-
-                    <button class="small icon ok"></button>
-
-                    <button class="icon ok"></button>
-
-                    <button class="big icon ok"></button>
-
-                    <button class="biggest icon ok"></button>
-                </p>
-
-                <p>
-                    <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-
-                    <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-
-                    <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-
-                    <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-
-                    <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
-                </p>
-
-                <p>
-                    <button class="button smallest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
-
-                    <button class="button small"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
-
-                    <button class="button"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
-
-                    <button class="button big"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
-
-                    <button class="button biggest"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></button>
-                </p>
-            <button class="wide" data-article="notifications">Action</button>
+            <p>This is an example of pull and refresh</p>
         </article>
         <article id="buttons" class="indented">
             <div>
@@ -427,7 +276,7 @@
                     alert("Refresh finished");
                     puller.hide()}, 3000);
             }});
-            Tako.Article("notifications");
+            // Tako.Article("notifications");
         });
 
         Tako.init({"sections": ["section2.html"]});
@@ -447,7 +296,7 @@
             })
         });
         $("#show_custom").bind("tap", function(){
-            Tako.Notification.custom("Custom", "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempus auctor convallis. Aliquam eget ipsum a velit pulvinar elementum vitae non dolor. Nullam dui metus, tincidunt non dolor eu, laoreet auctor tellus. Suspendisse vestibulum scelerisque nibh non scelerisque. Cras eget lobortis orci. Vestibulum ultrices enim mattis fermentum tristique. Nunc ultricies feugiat tellus, ut facilisis est dignissim nec. Vivamus molestie sem vel euismod vestibulum.", false, "invento", null, function(){console.log("Fin de custom")});});
+            Tako.Notification.custom("Custom", "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempus auctor convallis. Aliquam eget ipsum a velit pulvinar elementum vitae non dolor. Nullam dui metus, tincidunt non dolor eu, laoreet auctor tellus. Suspendisse vestibulum scelerisque nibh non scelerisque. Cras eget lobortis orci. Vestibulum ultrices enim mattis fermentum tristique. Nunc ultricies feugiat tellus, ut facilisis est dignissim nec. Vivamus molestie sem vel euismod vestibulum.", true, "", null, function(){console.log("Fin de custom")});});
         $("#show_loading").bind("tap", function(){
             Tako.Notification.loading("Loading", 5, function(){console.log("LOADING CB");})
         });
