Added device related visualization

--- a/package/index.html
+++ b/package/index.html
@@ -54,6 +54,8 @@
         </footer>
         <article id="main">
             <p>This is an example of pull and refresh</p>
+            <p data-device="phone">This is only seen in phone mode</p>
+            <p data-device="tablet">This is only seen in tablet mode</p>
         </article>
         <article id="buttons" class="indented">
             <div>
