--- a/package/index.html
+++ b/package/index.html
@@ -28,6 +28,7 @@
             <li data-article="buttons"><img class="small" src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Buttons</span></li>
             <li data-article="layouts"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Layouts</span></li>
             <li data-article="notifications"><img class="big" src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Notifications</span></li>
+            <li class="" data-article="colors">Colors</li>
         </ul>
     </aside>
 
@@ -37,7 +38,7 @@
                 <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
             </nav>
             <nav class="right">
-                <button  class="button" data-action="aside"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
+                <button  class="button" data-action="aside" data-visible="colors"><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""><span>Aside</span></button>
             </nav>
             <h1>TaKo!!</h1>
             <nav>
@@ -247,25 +248,19 @@
                 <button class="wide" id="show_progress">Progress</button>
             </div>
         </article>
-    </section>
-
-    <section id="section_2" class="footer">
-        <header>
-            <nav class="right">
-                <button data-action="aside">ASIDE!!<span class="counter">5</span></button>
-            </nav>
-            <h1><img src="http://upload.wikimedia.org/wikipedia/commons/8/81/Wikimedia-logo.svg" alt=""></h1>
-        </header>
-        <article id="a22">
-            Article22
-            <button data-article="a11" class="accept">First Section</button>
+        <article id="colors">
+            <p class="align-center blue" style="padding: 10px">blue</p>
+            <p class="align-center red" style="padding: 10px">red</p>
+            <p class="align-center yellow" style="padding: 10px">yellow</p>
+            <p class="align-center black" style="padding: 10px">black</p>
+            <p class="align-center white" style="padding: 10px">white</p>
+            <p class="align-center grey" style="padding: 10px">grey</p>
+            <p class="align-center green" style="padding: 10px">green</p>
+            <p class="align-center pink" style="padding: 10px">pink</p>
+            <p class="align-center purple" style="padding: 10px">purple</p>
+            <p class="align-center brown" style="padding: 10px">brown</p>
+            <p class="align-center orange" style="padding: 10px">orange</p>
         </article>
-        <footer>
-            <nav>
-                <div><button class="icon ok" id="show_success2">Success<span class="counter">5</span></button></div>
-                <div><button id="show_progress2">Progress<span class="counter">84</span></button></div>
-            </nav>
-        </footer>
     </section>
 
     <script src="js/tako.components.js"></script>
