--- a/package/index.html
+++ b/package/index.html
@@ -304,6 +304,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-    <script src="http://localhost:8080/target/target-script-min.js"></script>
+    <script src="http://192.168.2.100:8080/target/target-script-min.js"></script>
 </body>
 </html>
