--- a/package/index.html
+++ b/package/index.html
@@ -47,12 +47,12 @@
                 <button data-article="lists" class="icon list">Lists</button>
             </nav>
         </header>
-        <footer>
+        <!-- <footer>
             <nav>
                 <div><button class="icon ok" id="show_success2">Success<span class="counter">5</span></button></div>
                 <div><button id="show_progress2">Progress<span class="counter">84</span></button></div>
             </nav>
-        </footer>
+        </footer> -->
         <article id="main">
             <p>This is an example of pull and refresh</p>
             <p data-device="phone">This is only seen in phone mode</p>
