Fixed android 2.3 scrolling

--- a/package/index.html
+++ b/package/index.html
@@ -274,6 +274,7 @@
                     puller.hide()}, 3000);
             }});
             // Tako.Article("notifications");
+            // Tako.Article("buttons");
         });
 
         Tako.init({"sections": ["section2.html"]});
