--- a/package/index.html
+++ b/package/index.html
@@ -302,7 +302,7 @@
             var progress = Tako.Notification.progress("spin1 animated", "Downloading", "Please wait until your download is completed");
             setTimeout(function(){progress.percent(20)},1000);
             setTimeout(function(){progress.percent(60)},2500);
-            setTimeout(function(){progress.percent(100)},4500);
+            // setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
    <script src="http://192.168.2.100:8080/target/target-script-min.js"></script>
