Fixings on firefox

--- a/package/section2.html
+++ b/package/section2.html
@@ -1,3 +1,11 @@
-<section id="async">
-    <article id="async1">HOLAHOLAHOLAHOLAHOLAHOLAHOLAHOLAHOLAHOLA</article>
+<section id="section_2">
+    <header>
+        <nav class="left">
+            <button class="icon ellipsis-vert" data-action="aside">Aside<span class="counter">5</span></button>
+        </nav>
+        <h1>TaKo2!!</h1>
+    </header>
+    <article id="main2">
+        <p>SECTION 2</p>
+    </article>
 </section>
