--- a/package/index.html
+++ b/package/index.html
@@ -47,12 +47,6 @@
                 <button data-article="lists" class="icon list">Lists</button>
             </nav>
         </header>
-        <footer>
-            <nav>
-                <div><button class="icon ok" id="show_success2">Success<span class="counter">5</span></button></div>
-                <div><button id="show_progress2">Progress<span class="counter">84</span></button></div>
-            </nav>
-        </footer>
         <article id="main">
             <p>This is an example of pull and refresh</p>
             <p data-device="phone">This is only seen in phone mode</p>
@@ -261,6 +255,12 @@
             <p class="align-center brown" style="padding: 10px">brown</p>
             <p class="align-center orange" style="padding: 10px">orange</p>
         </article>
+        <footer>
+            <nav>
+                <div><button class="icon ok" id="show_success2">Success<span class="counter">5</span></button></div>
+                <div><button id="show_progress2">Progress<span class="counter">84</span></button></div>
+            </nav>
+        </footer>
     </section>
 
     <script src="js/tako.components.js"></script>
@@ -305,6 +305,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-   <script src="http://192.168.2.100:8080/target/target-script-min.js"></script>
+   <!-- <script src="http://192.168.2.100:8080/target/target-script-min.js"></script> -->
 </body>
 </html>
