--- a/package/index.html
+++ b/package/index.html
@@ -218,7 +218,7 @@
                         <div class="grey">none</div>
                         <div class="theme">none</div>
                         <div class="box_4 grey">box_4</div>
-                        <div class="theme">a</div>
+                        <div class="theme">none</div>
                     </div>
                 </div>
                 <br>
