Changes for keyboard visibility

--- a/package/index.html
+++ b/package/index.html
@@ -255,12 +255,12 @@
             <p class="align-center brown" style="padding: 10px">brown</p>
             <p class="align-center orange" style="padding: 10px">orange</p>
         </article>
-        <footer>
+        <!-- <footer>
             <nav>
                 <div><button class="icon ok" id="show_success2">Success<span class="counter">5</span></button></div>
                 <div><button id="show_progress2">Progress<span class="counter">84</span></button></div>
             </nav>
-        </footer>
+        </footer> -->
     </section>
 
     <script src="js/tako.components.js"></script>
@@ -305,6 +305,6 @@
             setTimeout(function(){progress.percent(100)},4500);
         });
     </script>
-   <!-- <script src="http://192.168.2.100:8080/target/target-script-min.js"></script> -->
+   <script src="http://192.168.2.102:8080/target/target-script-min.js"></script>
 </body>
 </html>
